--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
     "next-offline": "^3.3.8",
     "next-routes": "^1.4.2",
+    "polished": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
