--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
     "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
     "next-offline": "^3.3.8",
