--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-plugin-inline-dotenv": "^1.3.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
