--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,14 +83,7 @@ jobs:
         - deploy:
             name: Deployment NOW
             command: |
-              if [ "${CIRCLE_BRANCH}" == "master" ]; then
-                now --token ${ZEIT_TOKEN} --local-config .now/now.production.json
-                now --token ${ZEIT_TOKEN} --local-config .now/now.production.json alias
-              else
-                ./.now/now.feature.sh
-                now --token ${ZEIT_TOKEN} --local-config .now/now.feature.json
-                now --token ${ZEIT_TOKEN} --local-config .now/now.feature.json alias
-              fi
+              now -t ${ZEIT_TOKEN}
 
 workflows:
   version: 2
