--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
     "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
     "next-offline": "^3.3.8",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-plugin-inline-dotenv": "^1.3.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
