--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "lint:css": "stylelint './components/**/*.js' './styles/**/*.js' './pages/**/*.js'",
     "test": "jest",
     "test:watch": "jest --watch",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "storybook": "start-storybook -p 9001"
   },
   "dependencies": {
+    "@babel/core": "^7.4.3",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
     "dotenv": "^7.0.0",
     "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
@@ -30,6 +33,9 @@
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.0.10",
+    "@storybook/addon-centered": "^5.0.10",
+    "@storybook/react": "^5.0.10",
     "babel-eslint": "^10.0.1",
     "babel-plugin-inline-dotenv": "^1.3.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
