chore: add classnames pkg

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.4.3",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
