--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,8 @@ charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
-insert_final_newline = false
-max_line_length = 80
+insert_final_newline = true
+max_line_length = 100
 trim_trailing_whitespace = true
 
 [*.md]
