chore: add shortid pkg

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "shortid": "^2.2.14",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
