--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "storybook": "start-storybook -p 9001"
   },
   "dependencies": {
-    "@babel/core": "^7.4.3",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "classnames": "^2.2.6",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
+    "form-serialize": "^0.7.2",
     "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
     "next-offline": "^3.3.8",
@@ -35,6 +36,9 @@
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@storybook/addon-actions": "^5.0.10",
     "@storybook/addon-centered": "^5.0.10",
     "@storybook/react": "^5.0.10",
