--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
       "expect",
       "it",
       "describe",
-      "jest"
+      "jest",
+      "localStorage"
     ]
   },
   "lint-staged": {
