--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^8.1.0",
     "next-offline": "^3.3.8",
     "next-routes": "^1.4.2",
+    "nookies": "^2.0.4",
     "polished": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
