chore: add new variables

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Environment variables
 
-PORT=
+#PORT
+PORT=3001
 
 # LOCAL STORAGE TOKENS
-STORAGE_TOKEN=pw-token
+STORAGE_USER=pw-user
+STORAGE_HISTORY=pw-history
+
+# COOKIE TOKEN
+COOKIE_TOKEN=pwtoken-personal-wallet
