chore: add react-extras

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-extras": "^0.9.0",
+    "react-key-handler": "^1.2.0-beta.3",
     "shortid": "^2.2.14",
     "styled-components": "^4.2.0"
   },
