--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "node server",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server",
+    "export": "next export",
+    "deploy": "npm run build && npm run export",
     "lint": "xo --quiet",
     "lint:fix": "xo --quiet --write '**/*.js'",
     "lint:css": "stylelint './components/**/*.js' './styles/**/*.js' './pages/**/*.js'",
@@ -20,9 +22,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "cacheable-response": "^1.5.2",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
+    "express": "^4.16.4",
     "form-serialize": "^0.7.2",
     "hex-rgb": "^4.1.0",
     "next": "^8.1.0",
