--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "babel-loader": "^8.0.5",
     "cacheable-response": "^1.5.2",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
+    "date-fns": "^1.30.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "form-serialize": "^0.7.2",
