--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-extras": "^0.9.0",
     "react-key-handler": "^1.2.0-beta.3",
     "shortid": "^2.2.14",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "sweetalert2": "^8.9.0",
+    "vanilla-masker": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
