chore: add more environment variables

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ STORAGE_HISTORY=pw-history
 
 # COOKIE TOKEN
 COOKIE_TOKEN=pwtoken-personal-wallet
+
+# API
+OLINDA_API=https://olinda.bcb.gov.br/olinda/servico/PTAX/versao/v1/odata
+BITCOIN_API=https://www.mercadobitcoin.net/api
