--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "node server",
-    "build": "next build",
+    "build": "next build ./src/",
     "start": "NODE_ENV=production node server",
     "export": "next export",
     "deploy": "npm run build && npm run export",
